# Pome

./: .gitignore  CMakeLists.txt  README.md  debug_fib.pome  install.sh  test_crash.pome  test_import.pome  test_module_access.pome
.github/workflows/: cmake.yml  codacy.yml
assets/: logo.txt
benchmarks/: binary_search.pome  binary_search.py  binary_tree.pome  binary_tree.py  bubble_sort.pome  bubble_sort.py  compare_loop_local.py  data_analysis.pome  data_analysis.py  dijkstra.pome  dijkstra.py  fannkuch.pome  fannkuch.py  fib.pome  fib.py  game_of_life.pome  game_of_life.py  gc_stress.pome  graph_bfs.pome  graph_bfs.py  h_tree.pome  h_tree.py  json_parse.pome  json_parse.py  linked_list.pome  linked_list.py  list_bench.pome  list_bench.py  loop_stress.pome  loop_test.pome  loop_test.py  loop_test_local.pome  loop_test_local.py  mandelbrot.pome  mandelbrot.py  math_loop.pome  matrix_mul.pome  matrix_mul.py  merge_sort.pome  merge_sort.py  (+19 more)
build_agent/: pome-lsp  pome.desktop
docs/: 01-getting-started.md  02-language-fundamentals.md  03-control-flow.md  04-functions.md  05-oop.md  06-collections.md  07-operators.md  08-modules.md  09-standard-library.md  10-error-handling.md  11-advanced-topics.md  12-architecture.md  13-native-extensions.md  README.md
examples/: demo.pome  demo.pome.bak  export_module.pome  my_module.pome  test_class.pome.bak  test_errors.pome  test_for_loops.pome.bak  test_importer.pome  test_importer.pome.bak  test_return.pome  test_ternary.pome  test_unary_overload.pome
examples/basics/: demo.pome
examples/extensions/cpp_add/: CMakeLists.txt  build_extension.sh  my_extension.cpp  verify.pome
examples/modules/: export_block_mod.pome
examples/modules/test_modules/: test_module.pome
examples/test_modules/: test_module.pome
include/: pome_ast.h  pome_base.h  pome_chunk.h  pome_compiler.h  pome_environment.h  pome_errors.h  pome_file_utils.hpp  pome_forward.h  pome_gc.h  pome_gc_impl.h  pome_importer.h  pome_interpreter.h  pome_lexer.h  pome_module_resolver.h  pome_opcode.h  pome_parser.h  pome_pkg_info.h  pome_shape.h  pome_stdlib.h  pome_value.h  pome_vm.h
plans/: string-interning.md
src/: main.cpp  pome_chunk.cpp  pome_compiler.cpp  pome_environment.cpp  pome_file_utils.cpp  pome_fmt.cpp  pome_gc.cpp  pome_importer.cpp  pome_interpreter.cpp  pome_lexer.cpp  pome_lsp.cpp  pome_module_resolver.cpp  pome_parser.cpp  pome_pkg_info.cpp  pome_stdlib.cpp  pome_value.cpp  pome_vm.cpp
test/feature_tests/: test_async_await.pome  test_error_handling.pome  test_event_loop.pome  test_ffi.pome  test_nested_tasks.pome  test_runtime_catch.pome  test_thread_return.pome  test_threading.pome
test/root_tests/: mod_a.pome  mod_b.pome  module_to_import.pome  test_closure.pome  test_import.pome  test_module_isolation.pome  test_relative.pome
test/root_tests/sub/: main_sub.pome  util.pome
test/unit_tests/: test_class.pome  test_dot_import.pome  test_errors_fail.pome  test_export_block.pome  test_features.pome  test_for_loops.pome  test_gc.pome  test_gc_cycles.pome  test_import_fail.pome  test_importer.pome  test_inheritance.pome  test_math.pome  test_new_features.pome  test_recursion_limit.pome  test_stack_trace_fail.pome  test_standalone_block.pome  test_stdlib.pome  test_strict.pome  test_strict_fail.pome  test_ternary.pome  test_unboxed_list.pome  test_vm_flow.pome  test_vm_math.pome
tools/: bench_vs_python.py  pome_bench.py  pome_test_runner.py
